--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,9 +6,9 @@
 </head>
 <body>
   <nav>
-    <h1>Example Task List App</h1>
+    <h1>Task List Application</h1>
     <ul>
-      <li class="navlink"><a href="{{ url_for('home') }}">logout</a></li>
+      <li class="navlink"><a href="{{ url_for('home') }}">Logout</a></li>
       <li class="navlink"><a href="{{ url_for('tasks', name=name) }}">View Tasks</a></li>
       <li class="navlink"><a href="{{ url_for('create_task', name=name) }}">New Task</a></li>
     </ul>
