--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,9 +8,9 @@
   <nav>
     <h1>Task List Application</h1>
     <ul>
-      <li class="navlink"><a href="{{ url_for('home') }}">Logout</a></li>
-      <li class="navlink"><a href="{{ url_for('tasks', name=name) }}">View Tasks</a></li>
-      <li class="navlink"><a href="{{ url_for('create_task', name=name) }}">New Task</a></li>
+      <li class="navlink"><a href="{{ url_for('main.home') }}">Logout</a></li>
+      <li class="navlink"><a href="{{ url_for('main.tasks', name=name) }}">View Tasks</a></li>
+      <li class="navlink"><a href="{{ url_for('main.create_task', name=name) }}">New Task</a></li>
     </ul>
   </nav>
 
