--- a/app/templates/new_task.html
+++ b/app/templates/new_task.html
@@ -1,9 +1,13 @@
 {% extends 'base.html' %}
 
 {% block main %}
-    <h1>Create a new task</h1>
+<h1>Create a new task</h1>
+
+<form action="{{ url_for('main.create_task', name=name) }}" method="post">
+    <input type="text" name="title" placeholder="Task title">
+    <button type="submit">Add</button>
+</form>
+
+<a href="{{ url_for('main.tasks', name=name) }}">Back to tasks</a>
 {% endblock %}
-
-
-
 
