--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
-<html>
-<body>
+{% extends "base.html" %}
 
+{% block main %}
 <h2>Login</h2>
 
 <form method="POST">
@@ -19,3 +18,4 @@
 
 </body>
 </html>
+{% endblock %}
