--- a/app/templates/new_task.html
+++ b/app/templates/new_task.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block nav %}
+  {% include "components/nav.html" %}
+{% endblock %}
+
 {% block main %}
 <h1>Create a new task</h1>
 
