--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,19 +5,39 @@
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
 </head>
 <body>
-  <nav>
-    <h1>Task List Application</h1>
-    <ul>
-      <li class="navlink"><a href="{{ url_for('main.home', name=name) }}">Home</a></li>
-      <li class="navlink"><a href="{{ url_for('main.tasks', name=name) }}">View Tasks</a></li>
-      <li class="navlink"><a href="{{ url_for('main.create_task', name=name) }}">New Task</a></li>
-      <li class="navlink"><a href="{{ url_for('main.logout') }}">Logout</a></li>
-    </ul>
-  </nav>
+    {% block nav %}{% endblock %}
+
+  <div class="flash-container">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        {% for category, message in messages %}
+          <div class="flash {{ category }}">{{ message }}</div>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
+  </div>
 
   <main>
     {% block main %}
     {% endblock %}
   </main>
+
+  <script>
+    // Auto-hide flash messages after 2.5 seconds
+    setTimeout(() => {
+      document.querySelectorAll('.flash').forEach(flash => {
+        flash.classList.add('fade-out');
+      });
+    }, 2500);
+
+    // Remove from DOM after animation ends
+    setTimeout(() => {
+      document.querySelectorAll('.flash').forEach(flash => {
+        flash.remove();
+      });
+    }, 3500);
+  </script>
+
+
 </body>
 </html>
