--- a/app/templates/edit_task.html
+++ b/app/templates/edit_task.html
@@ -3,13 +3,22 @@
 {% block main %}
 <h1>Edit Task</h1>
 
-<form action="{{ url_for('main.edit_task', name=name, task_id=todo.id) }}" method="post">
-    <input type="text" name="title" value="{{ todo.title }}">
-    <label>
-        <input type="checkbox" name="completed" {% if todo.completed %}checked{% endif %}>
-        Completed
-    </label>
-    <button type="submit">Save</button>
+<form method="POST" action="{{ url_for('main.edit_task', name=name, task_id=todo.id) }}">
+    {{ form.hidden_tag() }}
+
+    <p>
+        {{ form.title.label }}<br>
+        {{ form.title }}
+    </p>
+
+    <p>
+        {{ form.completed.label }}
+        {{ form.completed }}
+    </p>
+
+    <p>
+        {{ form.submit }}
+    </p>
 </form>
 
 <a href="{{ url_for('main.tasks', name=name) }}">Back to tasks</a>
