--- a/app/templates/tasks.html
+++ b/app/templates/tasks.html
@@ -1,17 +1,26 @@
 {% extends 'base.html' %}
 
+{% block nav %}
+  {% include "components/nav.html" %}
+{% endblock %}
+
 {% block main %}
-<h1>{{ name }}'s Tasks</h1>
-
-<a href="{{ url_for('main.create_task', name=name) }}">New Task</a>
-
 <ul>
 {% for todo in todos %}
     <li>
-        {% if todo.completed %}<s>{{ todo.title }}</s>{% else %}{{ todo.title }}{% endif %}
+        {% if todo.completed %}
+            <s>{{ todo.title }}</s>
+        {% else %}
+            {{ todo.title }}
+        {% endif %}
+
         <a href="{{ url_for('main.edit_task', name=name, task_id=todo.id) }}">Edit</a>
-        <form action="{{ url_for('main.delete_task', name=name, task_id=todo.id) }}" method="post" style="display:inline">
-            <button type="submit">Delete</button>
+
+        <form method="post" 
+              action="{{ url_for('main.delete_task', name=name, task_id=todo.id) }}" 
+              style="display:inline">
+            {{ delete_form.hidden_tag() }}
+            {{ delete_form.submit }}
         </form>
     </li>
 {% else %}
