--- a/app/templates/components/nav.html
+++ b/app/templates/components/nav.html
@@ -1,8 +1,20 @@
 <nav class="navbar">
-  <h1 class="navbar-title"><a href="{{ url_for('main.home', name=name) }}"></a>Task List Application</a></h1>
-  <ul class="navbar-links">
-    <li><a href="{{ url_for('main.tasks', name=name) }}">View Tasks</a></li>
-    <li><a href="{{ url_for('main.create_task', name=name) }}">New Task</a></li>
-    <li><a href="{{ url_for('main.logout') }}">Logout</a></li>
-  </ul>
+  <div class="navbar-inner">
+
+    <div class="navbar-left">
+      <h1 class="navbar-title">
+        <a href="{{ url_for('main.home', name=name) }}">Task List Application</a>
+      </h1>
+
+      <ul class="navbar-links">
+        <li><a href="{{ url_for('main.tasks', name=name) }}">View Tasks</a></li>
+        <li><a href="{{ url_for('main.create_task', name=name) }}">New Task</a></li>
+      </ul>
+    </div>
+
+    <div class="navbar-right">
+      <a href="{{ url_for('main.logout') }}" class="navbar-cta">Logout</a>
+    </div>
+
+  </div>
 </nav>
