--- a/app/templates/edit_task.html
+++ b/app/templates/edit_task.html
@@ -1,25 +1,34 @@
 {% extends 'base.html' %}
 
+{% block nav %}
+  {% include "components/nav.html" %}
+{% endblock %}
+
 {% block main %}
-<h1>Edit Task</h1>
+<div class="page content-page">
+  <div class="card">
+    <h1 class="card-title">Edit Task</h1>
 
-<form method="POST" action="{{ url_for('main.edit_task', name=name, task_id=todo.id) }}">
-    {{ form.hidden_tag() }}
+    <form method="POST" action="{{ url_for('main.edit_task', name=name, task_id=todo.id) }}" class="form">
+        {{ form.hidden_tag() }}
 
-    <p>
-        {{ form.title.label }}<br>
-        {{ form.title }}
-    </p>
+        <div class="form-group">
+            {{ form.title.label(class="form-label") }}
+            {{ form.title(class="form-input") }}
+        </div>
 
-    <p>
-        {{ form.completed.label }}
-        {{ form.completed }}
-    </p>
+        <div class="form-group checkbox-group">
+            {{ form.completed() }}
+            {{ form.completed.label(class="form-label-inline") }}
+        </div>
 
-    <p>
-        {{ form.submit }}
-    </p>
-</form>
-
-<a href="{{ url_for('main.tasks', name=name) }}">Back to tasks</a>
+        <div class="form-actions">
+            {{ form.submit(class="btn btn-primary") }}
+            <a href="{{ url_for('main.tasks', name=name) }}" class="btn btn-secondary">
+                Back to tasks
+            </a>
+        </div>
+    </form>
+  </div>
+</div>
 {% endblock %}
