--- a/app/templates/new_task.html
+++ b/app/templates/new_task.html
@@ -5,13 +5,23 @@
 {% endblock %}
 
 {% block main %}
-<h1>Create a new task</h1>
+<div class="page content-page">
+  <div class="card">
+    <h1 class="card-title">Create a new task</h1>
 
-<form method="POST">
-    {{ form.hidden_tag() }}
-    {{ form.title.label }}: {{ form.title() }}
-    {{ form.submit() }}
-</form>
+    <form method="POST" class="form">
+        {{ form.hidden_tag() }}
 
-<a href="{{ url_for('main.tasks', name=name) }}">Back to tasks</a>
+        <div class="form-group">
+          {{ form.title.label(class="form-label") }}
+          {{ form.title(class="form-input") }}
+        </div>
+
+        <div class="form-actions">
+          {{ form.submit(class="btn btn-primary") }}
+          <a href="{{ url_for('main.tasks', name=name) }}" class="btn btn-secondary">Back to tasks</a>
+        </div>
+    </form>
+  </div>
+</div>
 {% endblock %}
