--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,21 +1,32 @@
 {% extends "base.html" %}
 
 {% block main %}
-<h2>Create Account</h2>
+<div class="page auth-page">
+  <div class="card auth-card">
+    <h2 class="card-title">Create Account</h2>
 
-<form method="POST">
-    {{ form.hidden_tag() }}
+    <form method="POST" class="form">
+        {{ form.hidden_tag() }}
 
-    <p>{{ form.username.label }}<br>{{ form.username() }}</p>
-    <p>{{ form.password.label }}<br>{{ form.password() }}</p>
+        <div class="form-group">
+          {{ form.username.label(class="form-label") }}
+          {{ form.username(class="form-input") }}
+        </div>
 
-    <p>{{ form.submit() }}</p>
-</form>
+        <div class="form-group">
+          {{ form.password.label(class="form-label") }}
+          {{ form.password(class="form-input") }}
+        </div>
 
-<p>Already have an account?
-   <a href="{{ url_for('main.login') }}">Login</a>
-</p>
+        <div class="form-actions">
+          {{ form.submit(class="btn btn-primary") }}
+        </div>
+    </form>
 
-</body>
-</html>
+    <p class="auth-switch">
+      Already have an account?
+      <a href="{{ url_for('main.login') }}">Login</a>
+    </p>
+  </div>
+</div>
 {% endblock %}
